--- a/hugo.toml
+++ b/hugo.toml
@@ -1,9 +1,14 @@
-languageCode = 'en-us'
 title = 'Myhro Notes'
 theme = 'bearblog'
+disableKinds = ['rss']
+languageCode = 'en-us'
 
 [params]
 hideMadeWithLine = true
 
 [permalinks]
 blog = '/:year/:month/:slug'
+
+[services]
+[services.rss]
+limit = 10
